--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
     
     <body style='margin : 0px; overflow: hidden;'>
-        <a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'></a-scene>
+        <a-scene embedded arjs>
             <!-- create your content here. just a box for now -->
             <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
             <!-- define a camera which will move according to the marker position -->
-            <a-marker type='barcode' value='5'></a-marker>
-        </a-scene>
+            <a-marker-camera type='pattern' url='path/to/pattern-1.patt'></a-marker-camera>
+          </a-scene>
     </body>
 </html>
