--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-marker type='barcode' value='1'>
-            <a-box position='0 0.5 0' color="yellow"></a-box>
+            <a-image rotation="-90 0 0" src="images/marker01picture.png" width="5.34" height="3"></a-image>
         </a-marker>
 
         <a-entity camera></a-entity>
