--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
-        <a-marker type='barcode' value='1'>
-            <a-image rotation="-90 0 0" src="images/marker01picture.png" scale="8.9 5"></a-image>
-        </a-marker>
+            <a-marker type='barcode' value='1'>
+                <a-image rotation="-90 0 0" src="images/marker01picture.png" width="14.24" height="8"></a-image>
+            </a-marker>
 
         <a-entity camera></a-entity>
         </a-scene>
