--- a/index.html
+++ b/index.html
@@ -2,17 +2,43 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+        <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+        <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
+        <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+        <script>
+            AFRAME.registerComponent('video-vidhandler', {
+                init: function() {
+		    console.log('video init entered');
+                    this.toggle = false;
+                    this.vid = document.querySelector("#inspiration");
+                    this.vid.pause();
+                },
+                tick: function() {
+                    if (this.el.object3D.visible == true) {
+                        if (!this.toggle) {
+                            this.toggle = true;
+                            this.vid.play();
+                        }
+                    } else {
+                        this.toggle = false;
+                        this.vid.pause();
+                    }
+                }
+            });
+        </script>
     </head>
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-    <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
-    <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 
     <body style='margin : 0px; overflow: hidden;'>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
+            <a-assets>
+                <video preload="none" id="inspiration" response-type="arraybuffer" loop="true" crossorigin webkit-playsinline playsinline controls>
+                    <source  src="videos/inspiration.mp4">
+                </video>
+            </a-assets>
 
-            <a-marker type='barcode' value='1'>
-                <a-video src="videos/inspiration.mp4" width="14.24" height="8"></a-video>
+            <a-marker type='barcode' value='1' video-vidhandler>
+                <a-plane scale = "14.24 8" position='0 0.1 0' rotation="-90 0 0" material='transparent:true;src:#inspiration' controls></a-plane>
             </a-marker>
 
         <a-entity camera></a-entity>
