--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a-entity camera></a-entity>
         </a-scene>
         <script>
-            window.addEventListener('click', function () {
+            window.addEventListener('load', function () {
             var v = document.querySelector('#inspiration');
             v.play();
             });
