--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body style='margin : 0px; overflow: hidden;'>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-assets>
-            <video id="inspiration" autoplay loop="true" muted="true" src="videos/inspiration.mp4"></video>
+            <video id="inspiration" autoplay loop="true" muted="false" src="videos/inspiration.mp4"></video>
           </a-assets>
 
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
