--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </a-assets>
 
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-            <a-marker type='barcode' value='1'>
+            <a-marker type='pattern' url='patterns/patternmarker1'>
                 <a-video src="#inspiration" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
             </a-marker>
 
