--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a-entity camera></a-entity>
         </a-scene>
     -->
-    <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false;">
+    <a-scene id="scene" arjs='trackingMethod: best; debugUIEnabled: false;' vr-mode-ui="enabled: false" ar-template ></a-scene>
         <a-marker type='pattern' url='patterns/pattern-binivaa.patt'>
             <a-video src="#inspiration" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
         </a-marker>
