--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a-video src="#inspiration" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
             </a-marker>
 
-            <a-marker type='pattern' url="patterns/pattern-binivaa">
+            <a-marker type='barcode' value='2'>
                 <a-video src="#funny" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
             </a-marker>
  
