--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
             <video id="funny" autoplay loop="true" muted="false" src="videos/funny.mp4"></video>
         </a-assets>
 
-        <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
+        <a-scene id="scene" arjs='trackingMethod: best; debugUIEnabled: false;' vr-mode-ui="enabled: false" ar-template >
+            <a-marker id="marker2" type='pattern' url='patterns/pattern-binivaa.patt'>
+                <a-video src="#inspiration" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
+            </a-marker>
+
+            <a-entity camera></a-entity>
+        </a-scene>
+
+        <!--
+            <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
             <a-marker type='barcode' value='1'>
                 <a-video src="#inspiration" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
             </a-marker>
@@ -26,6 +35,7 @@
  
             <a-entity camera></a-entity>
         </a-scene>
+        -->
 
         <script>
             window.addEventListener('load', function () {
