--- a/testing.html
+++ b/testing.html
@@ -6,46 +6,39 @@
         <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
         <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
         <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script>
-            AFRAME.registerComponent('video-vidhandler', {
-                init: function() {
-		    console.log('video init entered');
-                    this.toggle = false;
-                    this.vid = document.querySelector("#inspiration");
-                    this.vid.pause();
-                },
-                tick: function() {
-                    if (this.el.object3D.visible == true) {
-                        if (!this.toggle) {
-                            this.toggle = true;
-                            this.vid.play();
-                        }
-                    } else {
-                        this.toggle = false;
-                        this.vid.pause();
-                    }
-                }
-            });
-        </script>
     </head>
 
     <body style='margin : 0px; overflow: hidden;'>
-        <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-        <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-            <a-assets>
-                <video preload="none" id="inspiration" response-type="arraybuffer" loop="true" crossorigin webkit-playsinline playsinline controls>
-                    <source  src="videos/inspiration.mp4">
-                </video>
-            </a-assets>
+        
+        <a-assets>
+            <video id="inspiration" autoplay loop="true" muted="false" src="videos/inspiration.mp4"></video>
+            <video id="funny" autoplay loop="true" muted="false" src="videos/funny.mp4"></video>
+        </a-assets>
 
-            <a-marker type='barcode' value='1' video-vidhandler>
-                <a-plane scale = "4 2" position='0 0.1 0' rotation="-90 0 0" material='transparent:true;src:#inspiration' controls></a-plane>
+        <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
+            <a-marker type='barcode' value='1'>
+                <a-video src="#inspiration" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
             </a-marker>
 
-        <a-entity camera></a-entity>
+            <a-marker type='barcode' value='2'>
+                <a-video src="#funny" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
+            </a-marker>
+ 
+            <a-entity camera></a-entity>
         </a-scene>
+        
+
+        <script>
+            window.addEventListener('load', function () {
+            var v = document.querySelector('#inspiration');
+            v.play();
+            });
+        </script>
+        <script>
+            window.addEventListener('load', function () {
+            var v = document.querySelector('#funny');
+            v.play();
+            });
+          </script>
     </body>
 </html>
