--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
 
         <script>
-            window.addEventListener('load', function () {
+            window.addEventListener('canplaythrough', function () {
             var v = document.querySelector('#inspiration');
             v.play();
             });
