--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body style='margin : 0px; overflow: hidden;'>
         
         <a-assets>
-            <video id="inspiration" autoplay loop="true" muted="true" playsinline src="videos/inspiration.mp4"></video>
+            <video id="inspiration" autoplay loop="true" muted="true" src="videos/inspiration.mp4"></video>
             <video id="funny" autoplay loop="true" muted="true" src="videos/funny.mp4"></video>
         </a-assets>
 
@@ -29,13 +29,13 @@
         
 
         <script>
-            window.addEventListener('canplaythrough', function () {
+            window.addEventListener('load', function () {
             var v = document.querySelector('#inspiration');
             v.play();
             });
         </script>
         <script>
-            window.addEventListener('load', function () {
+            window.addEventListener('click', function () {
             var v = document.querySelector('#funny');
             v.play();
             });
