--- a/testing.html
+++ b/testing.html
@@ -11,8 +11,8 @@
     <body style='margin : 0px; overflow: hidden;'>
         
         <a-assets>
-            <video id="inspiration" autoplay loop="true" muted="false" src="videos/inspiration.mp4"></video>
-            <video id="funny" autoplay loop="true" muted="false" src="videos/funny.mp4"></video>
+            <video id="inspiration" autoplay loop="true" muted="true" src="videos/inspiration.mp4"></video>
+            <video id="funny" autoplay loop="true" muted="true" src="videos/funny.mp4"></video>
         </a-assets>
 
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
