--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a-assets>
             <video id="inspiration" autoplay loop="true" muted="true" src="videos/inspiration.mp4"></video>
             <video id="funny" autoplay loop="true" muted="true" src="videos/funny.mp4"></video>
+            <video id="sud" autoplay loop="true" muted="true" src="videos/sud.mp4"></video>
         </a-assets>
 
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
@@ -25,7 +26,7 @@
             </a-marker>
             
             <a-marker type='barcode' value='16'>
-                <a-video src="#funny" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
+                <a-video src="#sud" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
             </a-marker>
             
             <a-entity camera></a-entity>
@@ -41,6 +42,12 @@
         <script>
             window.addEventListener('load', function () {
             var v = document.querySelector('#funny');
+            v.play();
+            });
+          </script>
+          <script>
+            window.addEventListener('load', function () {
+            var v = document.querySelector('#sud');
             v.play();
             });
           </script>
