--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </a-marker>
             
             <a-marker type='barcode' value='16'>
-                <a-video src="#sud" position="0 0.5 0" rotation="270 0 0" play="true"></a-video>
+                <a-video src="#sud" position="0 0.5 0" rotation="270 0 0" play="true" scale="5.34 3"></a-video>
             </a-marker>
             
             <a-entity camera></a-entity>
