--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <video id="inspiration" autoplay loop="true" muted="true" src="videos/inspiration.mp4"></video>
             <video id="funny" autoplay loop="true" muted="true" src="videos/funny.mp4"></video>
             <video id="sud" autoplay loop="true" muted="true" src="videos/sud.mp4"></video>
+            <video id="cultural" autoplay loop="true" muted="true" src="videos/cultural.mp4"></video>
         </a-assets>
 
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
@@ -27,6 +28,10 @@
             
             <a-marker type='barcode' value='16'>
                 <a-video src="#sud" position="0 0.5 0" rotation="270 0 0" play="true" scale="5.34 3"></a-video>
+            </a-marker>
+
+            <a-marker type='barcode' value='3'>
+                <a-video src="#cultural" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
             </a-marker>
             
             <a-entity camera></a-entity>
@@ -48,6 +53,12 @@
           <script>
             window.addEventListener('load', function () {
             var v = document.querySelector('#sud');
+            v.play();
+            });
+          </script>
+          <script>
+            window.addEventListener('load', function () {
+            var v = document.querySelector('#cultural');
             v.play();
             });
           </script>
