--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <video id="funny" autoplay loop="true" muted="true" src="videos/funny.mp4"></video>
             <video id="sud" autoplay loop="true" muted="true" src="videos/sud.mp4"></video>
             <video id="cultural" autoplay loop="true" muted="true" src="videos/cultural.mp4"></video>
+            <video id="educational" autoplay loop="true" muted="true" src="videos/educational.mp4"></video>
         </a-assets>
 
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
@@ -32,6 +33,10 @@
 
             <a-marker type='barcode' value='3'>
                 <a-video src="#cultural" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
+            </a-marker>
+
+            <a-marker type='barcode' value='4'>
+                <a-video src="#educational" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
             </a-marker>
             
             <a-entity camera></a-entity>
@@ -59,6 +64,12 @@
           <script>
             window.addEventListener('load', function () {
             var v = document.querySelector('#cultural');
+            v.play();
+            });
+          </script>
+          <script>
+            window.addEventListener('load', function () {
+            var v = document.querySelector('#educational');
             v.play();
             });
           </script>
