--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <video id="sud" autoplay loop="true" muted="true" src="videos/sud.mp4"></video>
             <video id="cultural" autoplay loop="true" muted="true" src="videos/cultural.mp4"></video>
             <video id="educational" autoplay loop="true" muted="true" src="videos/educational.mp4"></video>
-            <video id="comfort" autoplay loop="true" muted="true" src="videos/comfort.mp4"></video>
+            <video id="comfort_1" autoplay loop="true" muted="true" src="videos/comfort_1.mp4></video>
         </a-assets>
 
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
@@ -41,7 +41,7 @@
             </a-marker>
 
             <a-marker type='barcode' value='5'>
-                <a-video src="#comfort" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
+                <a-video src="#comfort_1" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
             </a-marker>
             
             <a-entity camera></a-entity>
@@ -80,7 +80,7 @@
           </script>
           <script>
             window.addEventListener('load', function () {
-            var v = document.querySelector('#comfort');
+            var v = document.querySelector('#comfort_1');
             v.play();
             });
           </script>
