--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <video id="sud" autoplay loop="true" muted="true" src="videos/sud.mp4"></video>
             <video id="cultural" autoplay loop="true" muted="true" src="videos/cultural.mp4"></video>
             <video id="educational" autoplay loop="true" muted="true" src="videos/educational.mp4"></video>
-            <video id="comfort_1" autoplay loop="true" muted="true" src="videos/comfort_1.mp4></video>
+            <video id="comfort_1" autoplay loop="true" muted="true" src="videos/comfort_1.mp4"></video>
         </a-assets>
 
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
