--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             <a-marker type='barcode' value='5'>
                 <a-video src="#comfort_1" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
             </a-marker>
+
+            <a-marker type='barcode' value='24'>
+                <a-video src="#comfort_1" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
+            </a-marker>
             
             <a-entity camera></a-entity>
         </a-scene>
