--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <video id="educational" autoplay loop="true" muted="true" src="videos/educational.mp4"></video>
             <video id="comfort_1" autoplay loop="true" muted="true" src="videos/comfort_1.mp4"></video>
             <video id="customize" autoplay loop="true" muted="true" src="videos/customize.mp4"></video>
+            <video id="kobe" autoplay loop="true" muted="true" src="videos/kobe.mp4"></video>
         </a-assets>
 
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
@@ -41,7 +42,7 @@
             </a-marker>
 
             <a-marker type='barcode' value='24'>
-                <a-video src="#comfort_1" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
+                <a-video src="#kobe" position="0 0.5 0" rotation="270 0 0" play="true" scale="7.12 4"></a-video>
             </a-marker>
 
             <a-marker type='barcode' value='10'>
@@ -86,6 +87,12 @@
           <script>
             window.addEventListener('load', function () {
             var v = document.querySelector('#customize');
+            v.play();
+            });
+          </script>
+          <script>
+            window.addEventListener('load', function () {
+            var v = document.querySelector('#kobe');
             v.play();
             });
           </script>
